# gallopics-api

./: .gitignore  PLAN.md  README.md  alembic.ini  pyproject.toml  render.yaml  spec.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  20260428_0001_add_profile_fields.py  20260430_0001_add_photographer_event_bookings.py  20260504_0001_ensure_photographer_event_bookings.py  20260504_0002_fix_booking_timestamp_defaults.py  20260510_0001_add_photo_class_ids.py  20260511_0001_add_photo_event_class_fields.py  20260511_0002_add_photographer_highlights.py  20260512_0001_add_photo_purchases.py
app/: config.py  database.py  exceptions.py  main.py  redis.py
app/middleware/: error_handler.py  logging.py  rate_limit.py
app/models/: __init__.py  base.py  enums.py  event.py  order.py  photographer.py  user.py
app/routers/: admin.py  checkout.py  events.py  gallery.py  health.py  integrations.py  orders.py  photographer.py  users.py
app/schemas/: __init__.py  admin.py  checkout.py  event.py  order.py  photographer.py  user.py
app/services/: audit_service.py  event_service.py  gallery_service.py  image_processing.py  matching_service.py  order_service.py  photographer_service.py  user_service.py
app/storage/: base.py  local.py  s3.py
app/tasks/: celery_app.py  equipe_sync.py  image_processing.py  matching.py  tdb_sync.py
scripts/: bootstrap_data.py  create_schema.py  deploy.sh  post_deploy_sync.sh
tests/: conftest.py  factories.py
tests/integration/: test_admin_api.py  test_checkout_api.py  test_events_api.py  (+7 more)
tools/: klarna-playground-test.html
(+27 files in other folders)
