[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gallopics-api"
version = "1.0.0"
description = "Backend API for gallopics.com — equestrian event platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "asyncpg",
    "psycopg[binary]",
    "redis[hiredis]",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-multipart",
    "python-slugify",
    "rapidfuzz",
    "structlog",
    "tenacity",
    "python-dateutil",
    "beautifulsoup4",
    "celery[redis]",
    "PyJWT[crypto]",
    "Pillow",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "httpx",
    "factory-boy",
    "respx",
    "fakeredis[lua]",
    "aiosqlite",
    "ruff",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["app*"]
